# lolo-sinoe-scraping

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  session.json
scripts/: capture_login_html.py  discover_bandeja.py  discover_expediente_search.py
src/lolo_sinoe/: __init__.py  cli.py  config.py  errors.py  logging.py
src/lolo_sinoe/api/: __main__.py  server.py
src/lolo_sinoe/auth/: __init__.py  login.py  selectors.py
src/lolo_sinoe/browser/: __init__.py  launcher.py  pool.py  stealth_args.py
src/lolo_sinoe/captcha/: __init__.py  base.py  capsolver_solver.py  fallback_solver.py  solver.py  twocaptcha_solver.py
src/lolo_sinoe/exploration/: __init__.py  crawler.py  recorder.py  reporter.py  sinoe_navigator.py  types.py
src/lolo_sinoe/persistence/db/: engine.py  models.py
src/lolo_sinoe/persistence/kms/: kms_client.py
src/lolo_sinoe/persistence/repositories/: account_repo.py  notification_repo.py  sync_log_repo.py
src/lolo_sinoe/persistence/s3/: s3_client.py
src/lolo_sinoe/scheduler/: scheduler.py
src/lolo_sinoe/workers/: rate_limiter.py  scrape_worker.py  shared_resources.py  sync_engine.py  worker_manager.py
tests/: conftest.py
tests/fixtures/: login_page.html
tests/integration/: conftest.py  test_account_repo.py  test_kms_session.py  test_notification_repo.py
tests/unit/: test_browser_pool.py  test_config.py  test_crawler_safety.py  test_errors.py  test_fallback_solver.py  test_logging_redaction.py  test_rate_limiter.py  test_recorder_slug.py  test_sinoe_navigator.py  test_sync_engine.py
