[project]
name = "lolo-sinoe-scraping"
version = "0.1.0"
description = "Login + exploration tool for SINOE (Sistema de Notificaciones Electrónicas, Poder Judicial del Perú)"
authors = [
    { name = "AARON PAREDES CABRERA", email = "iron0406@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "2captcha-python>=1.5.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "typer>=0.13.0",
    "capsolver-python>=1.0",
    # Multitenant mode (Plan §7.2.bis)
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "boto3>=1.35.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # PDF metadata extraction (firma digital, núm de páginas) — Plan §2.2.1
    "pypdf>=5.1.0",
    # Redis: queues internas (priority/monitor/initial) y BRPOP del worker
    "redis>=5.2.0",
]

[project.scripts]
lolo-sinoe = "lolo_sinoe.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lolo_sinoe"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["twocaptcha.*", "capsolver_python.*", "boto3.*", "redis.*", "redis.asyncio.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit the real SINOE (opt-in via LIVE_TESTS=1 env var)",
]
